syntax = "proto3";

option java_package = "com.stackroute.musicmantra.noty5.emailserver";
option java_multiple_files = true;


service EmailServer{
	//sending email to swetha
  rpc sendOTPMail(mailRequest) returns(apiResponse);
  rpc bookingNotification(bookingDetails)returns(bookingmailResponse);
}

enum MailType{
	REGISTER =0;
	UPDATE = 1;
	RESETPASSWORD = 2;
}

enum bookingtype{
	confirm = 0;
	cancel = 1;
}

message mailRequest{
  string userId = 1;
  MailType mailType = 2; 
}

message apiResponse{
  string message = 1;
  int32 OTP = 2;
  int32 responsecode =3;
}

message bookingDetails{
	int32 bookingId =1;
	string bookingtype = 2;
}

message bookingmailResponse{
	string message = 1;
	int32 Responsecode = 2;
}
