package com.stackroute.musicmantra.noty5.constants;

public class Constants {

		public static String CONFIRM = "confirm";
		public static String CANCEL = "cancel";
		public static String DATABSENAME = "grpcdemo";
		public static String DATABASEPASSWORD = "postgres";
		public static String DATABASEUSERNAME = "postgres";
		public static String TABLE = "user_info";
		public static String EMAILID = "emailid";
		public static String BOOKINGTABLE = "bookings";
		public static String BOOKINGID = "bookingid";
		public static String EMAILDETAILS = "/home/sindhu/Documents/musicmantra/email-notification-service/src/main/resources/SenderEmailInfo/EmailIdPassword.txt";
		public static String STUDENT = "student";
		public static String TEACHER = "teacher";
		public static String STUDENTID = "studentid";
		public static String TEACHERID = "teacherid";
		public static String USERNAME = "username";
		public static String USERID = "user_id";
		public static String FIRSTNAME =  "first_name";
		public static String INSTRUMENTNAME = "instrumrntname";
		public static String INSTRUMENTID = "instrumentid";
		public static String INSTRUMENT = "instrument";
		
}
